added CV and made download CV button functionable

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
             <p>I am a CS student and a</p>
             <p>passonate <span class="purple">Web developer</span></p>
 
-            <button class="btn">Download CV</button>
+            <!-- <button class="btn">Download CV</button> -->
+            <a href="./files/resume.pdf" target="_blank" class="btn">Download CV</a>
             <button class="btn btn-transparent">More About Me</button>
         </div>
         <div class="home-img animate-fade">
